# qwen-embedding-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  evaluate.py  evaluate_reranker.py  pyproject.toml  test_call.py
evaluation/: utils.py
scripts/: build.sh  run-container.sh
src/: main.py  settings.py
src/embedding/: dependencies.py  router.py  schemas.py  utils.py
src/ml/: loader.py  qwen3_vl_embedding.py  qwen3_vl_reranker.py
src/reranker/: dependencies.py  router.py  schemas.py
src/upload/: router.py
