[project]
name = "yrl-aida-qwen3-embedding-serivce"
version = "0.2.0"
description = "Simple service for creating embeddings."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "aiofiles>=25.1.0",
    "fastapi>=0.128.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "setuptools>=80.10.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
